Fixed some weird spacing decision I made on the index page.

--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,7 @@ h2 {
 	font-size: 2rem;
 	font-family: 'argesta_hairlineregular';
 	margin-bottom:1rem;
+	margin-top:1rem;
 	color: rgb(112, 124, 145);
 }
 
@@ -134,7 +135,6 @@ background {
 .description{
 	font-family: "argesta_hairlineregular";
 	font-size: 0.75rem;
-	position:relative;
 }
 
 .letterBody{
@@ -143,7 +143,6 @@ background {
 	font-size: 0.75rem;
 	line-height: 1.5em;
 	margin-top:0px;
-	margin-bottom:1rem;
 	color: rgb(112, 124, 145);
 }
 
@@ -151,8 +150,9 @@ background {
 	font-family: "basier_squareregular";
 	font-weight: normal;
 	font-size: 0.75rem;
-	line-height: 1.5em;
+	line-height: 1em;
 	margin-top:0px;
+	color: rgb(112, 124, 145);
 }
 
 .signature{
@@ -176,7 +176,6 @@ background {
   	font-weight: 600;
 		overflow: hidden;
 		height: 40px;
-		padding:0 40px;
   }
 
 }
@@ -184,10 +183,8 @@ background {
 .topCard{
 	align-items: center;
 	line-height: 0.8;
-	padding:60px;
 	margin-left: auto;
 	margin-right: auto;
-	margin-bottom: auto;
 	display:flex;
 	justify-content: center;
 	height: auto;
@@ -196,17 +193,16 @@ background {
 
 @media(max-width: 875px) {
 	.topCard {
-		margin-bottom: 40px;
 	}
 
 }
 
 .cards {
 	align-items: center;
-	padding-top: 40px;
 	padding-left: 25%;
 	padding-right: 25%;
 	margin-left: auto;
+margin-top:auto;
 	margin-right: auto;
 }
 
@@ -677,9 +673,6 @@ to {
 	font-family: hattonultrabold;
   font-size: 3rem;
   font-style: normal;
-	line-height: 30rem;
-  position:absolute;
-	margin-top: 15rem;
 	color: black;
   text-align: center;
   text-transform: uppercase;
